Restructured app architecture, created JSON file, developed AJAX call, sorting, localstorage data saving

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -3,6 +3,10 @@ $red: #ff0000;
 $green: #00ff3b;
 $orange: #ff8900;
 $grey: #a0a0a0;
+$blue: #2990cd;
+$black: #202021;
+$lightBlue: #40c8ec;
+
 // Responsive Breakpoints
 $breakpoint-s: 576px !default;
 $breakpoint-m: 767px !default;
