--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -1,4 +1,7 @@
-@import 'icons';
-@import 'variables';
 @import 'tailwind';
+@import 'variables';
 @import 'mixins';
+@import 'icons';
+@import 'buttons';
+@import 'forms';
+@import 'animations';
