set alerts  globally, finished specialist page with search functionality, time tracking functionality for client

--- a/src/assets/styles/base/_buttons.scss
+++ b/src/assets/styles/base/_buttons.scss
@@ -1,5 +1,6 @@
 .btn {
   display: block;
+  text-align: center;
   color: white;
   font-weight: bold;
   padding: 0.5rem 0;
@@ -26,4 +27,10 @@
 
 .btn--full {
   width: 100%;
+}
+
+.btn--disabled {
+  // background: $red;
+  opacity: 0.5;
+  cursor: auto;
 }
