--- a/src/assets/styles/blocks/_alert.scss
+++ b/src/assets/styles/blocks/_alert.scss
@@ -6,8 +6,15 @@
   font-weight: bold;
   color: white;
   text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
-  background-color: $green;
   border-radius: 0.25rem;
   padding: 1rem;
   @include box;
+}
+
+.alert--success {
+  background-color: $green;
+}
+
+.alert--error {
+  background-color: $red;
 }
