--- a/src/assets/styles/blocks/_circles.scss
+++ b/src/assets/styles/blocks/_circles.scss
@@ -62,7 +62,12 @@ $diam: 0.75rem;
   }
 }
 
-// outer circle
+.person__status-circle {
+  position: absolute;
+  top: calc(#{$diam} / -2);
+  right: calc(#{$diam} / -2);
+}
+
 @keyframes pulse {
   0% {
     transform: scale(2);
@@ -74,7 +79,6 @@ $diam: 0.75rem;
   }
 }
 
-// inner circle
 @keyframes pulse2 {
   0% {
     transform: scale(1.5);
