--- a/src/assets/styles/base/_icons.scss
+++ b/src/assets/styles/base/_icons.scss
@@ -43,7 +43,18 @@
 .icon-user:before {
   content: '\e905';
 }
-
 .icon-info:before {
   content: '\e906';
+}
+.icon-expand:before {
+  content: '\e907';
+}
+.icon-shrink:before {
+  content: '\e908';
+}
+.icon-specialist:before {
+  content: '\e909';
+}
+.icon-statistics:before {
+  content: '\e90a';
 }
