--- a/src/assets/styles/base/_mixins.scss
+++ b/src/assets/styles/base/_mixins.scss
@@ -22,3 +22,9 @@
   border-radius: 0.25rem;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
 }
+
+@mixin absoluteCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
